fixed 10-grid, 12-forms-style added style

--- a/10-grid/index.html
+++ b/10-grid/index.html
@@ -119,10 +119,10 @@
                         <img src="assets/image/image-1.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -134,10 +134,10 @@
                         <img src="assets/image/image2.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -149,10 +149,10 @@
                         <img src="assets/image/image3.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -164,10 +164,10 @@
                         <img src="assets/image/image4.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -179,10 +179,10 @@
                         <img src="assets/image/image5.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -194,10 +194,10 @@
                         <img src="assets/image/image6.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -209,10 +209,10 @@
                         <img src="assets/image/image7.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -224,10 +224,10 @@
                         <img src="assets/image/image8.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -239,10 +239,10 @@
                         <img src="assets/image/image9.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
@@ -254,10 +254,10 @@
                         <img src="assets/image/image10.png" alt="">
                         <div class="icons">
                             <div class="icon">
-                                <i class="icon-heart"></i>
+                                <button type="button" class="icon"><i class="icon-heart"></i></button>
                             </div>
                             <div class="icon">
-                                <i class="icon-download"></i>
+                                <a href='#'><i class="icon-download"></i></a>
                             </div>
                         </div>
                         <div class="info">
