--- a/12-forms-style/index.html
+++ b/12-forms-style/index.html
@@ -73,10 +73,13 @@
                         <div class="img">
                             <img src="assets/img/📷 Image.svg" alt="">
                         </div>
-                        <div class="wrapper-profile">
+                        <div class="wrapper-profile fl">
                             <div class="file">
-                                <input type="file">
-                                <a href="#" class="bt"><i class="icon-delete"></i></a>
+                                <div class="file-wrapper">
+                                    <input type="file">
+                                    <div class="file-style"><i class="icon-camera"></i></div>
+                                </div>
+                                <button type="button" class="bt"><i class="icon-delete"></i></button>
                             </div>
                             <span class="mb">Up to 1 MB (300x300 px)</span>
                         </div>
