--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -106,6 +106,96 @@
             </div>
         </div>
     </section>
+    <section class="position-section">
+        <div class="container">
+            <div class="position">
+                <div class="position-wrapper">
+                    <div class="position-title">
+                        <span>Effortless Validation for</span>
+                        <h2>Design Professionals</h2>
+                        <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+                    </div>
+                    <div class="position-list">
+                        <ul>
+                            <li>
+                                <h3>Accessory makers</h3>
+                                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                            </li>
+                            <li>
+                                <h3>Alterationists</h3>
+                                <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                            </li>
+                            <li>
+                                <h3>Custom Design designers</h3>
+                                <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="design-img">
+                    <img src="assets/img/Image-man.svg" alt="">
+                </div>
+            </div>
+            <div class="manager">
+                <div class="position">
+                    <div class="manager-img">
+                        <img src="assets/img/Image-manager.svg" alt="">
+                    </div>
+                    <div class="position-wrapper mg">
+                        <div class="position-title">
+                            <span>Easier decision making for</span>
+                            <h2>Product Managers</h2>
+                            <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+                        </div>
+                        <div class="position-list">
+                            <ul>
+                                <li class="position-li">
+                                    <img src="assets/img/icon.svg" alt="">
+                                    <p>Never worry about overpaying for your energy bill again. </p>
+                                </li>
+                                <li class="position-li">
+                                    <img src="assets/img/icon.svg" alt="">
+                                    <p>We will only switch you to energy companies that we trust and will treat you right.</p>
+                                </li>
+                                <li class="position-li">
+                                    <img src="assets/img/icon.svg" alt="">
+                                    <p>We track the markets daily and know where the savings are.</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="position">
+                <div class="position-wrapper markets">
+                    <div class="position-title">
+                        <span>Optimisation for</span>
+                        <h2>Marketers</h2>
+                        <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
+                    </div>
+                    <div class="position-list">
+                        <ul>
+                            <li>
+                                <h3>Accessory makers</h3>
+                                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                            </li>
+                            <li>
+                                <h3>Alterationists</h3>
+                                <p>If you are looking for a new way to promote your business that won’t cost you more money. </p>
+                            </li>
+                            <li>
+                                <h3>Custom Design designers</h3>
+                                <p>If you are looking for a new way to promote your business that won’t cost you more money.  </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="design-img">
+                    <img src="assets/img/Image-marketers.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
    </main> 
    <footer class="footer">
         <div class="container">
