added link 13-svg

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <li>
             <a href="12-forms-style/index.html"> Lesson 12-forms-style</a>
         </li>
+        <li>
+            <a href="13-svg/index.html">Lesson 13-svg</a>
+        </li>
     </ul>
 </body>
 </html>
