added rwd 07, 13 added sprite

--- a/13-svg/index.html
+++ b/13-svg/index.html
@@ -26,9 +26,12 @@
                 <div class="item">
                     <div class="content">
                         <div class="icon">
-                            <div class="icon-svg mg">
-                                <img src="assets/img/megaphone-blue.svg" alt="">
-                            </div>                                
+                            <svg class="blue-icon">
+                                <use xlink:href="assets/img/sprite-mg.svg#mega-blue" />
+                            </svg>
+                            <svg class="green-icon">
+                                <use xlink:href="assets/img/sprite-mg.svg#mega-green" />
+                            </svg>                                
                         </div>
                         <div class="text">
                             <h2>Design</h2>
@@ -42,9 +45,12 @@
                 <div class="item">
                     <div class="content">
                         <div class="icon">
-                            <div class="icon-svg bi">
-                                <img src="assets/img/building-blue.svg" alt="">
-                            </div>
+                            <svg class="blue-icon">
+                                <use xlink:href="assets/img/sprite-bl.svg#bl-blue" />
+                            </svg>
+                            <svg class="green-icon">
+                                <use xlink:href="assets/img/sprite-bl.svg#bl-green" />
+                            </svg>
                         </div>
                         <div class="text">
                             <h2>
@@ -60,9 +66,12 @@
                 <div class="item">
                     <div class="content">
                         <div class="icon">
-                            <div class="icon-svg ph">
-                                <img src="assets/img/phone-blue.svg" alt="">
-                            </div>
+                            <svg class="blue-icon">
+                                <use xlink:href="assets/img/sprite-ph.svg#ph-blue" />
+                            </svg>
+                            <svg class="green-icon">
+                                <use xlink:href="assets/img/sprite-ph.svg#ph-green" />
+                            </svg>
                         </div>
                         <div class="text">
                             <h2>
