--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <li>
             <a href="13-svg/index.html">Lesson 13-svg</a>
         </li>
+        <li>
+            <a href="14-practice-rwd/index.html"></a>
+        </li>
+        <li>
+            <a href="15-rwd-img/index.html">Lesson 15-rwd-img</a>
+        </li>
     </ul>
 </body>
 </html>
