--- a/15-rwd-img/index.html
+++ b/15-rwd-img/index.html
@@ -104,7 +104,7 @@
                         <h2>Need a project?</h2>
                         <div class="cont">
                             <h6 class="contacts"><a href="tel:2395550108">(239) 555-0108</a></h6>
-                            <h6 class="contacts"><a href="emailo:tanya.hill@example.com">tanya.hill@example.com</a></h6>
+                            <h6 class="contacts"><a href="mailto:tanya.hill@example.com">tanya.hill@example.com</a></h6>
                         </div>
                     </div>
                     <div class="soc">
