added animate 07-producly 10-grid

--- a/10-grid/index.html
+++ b/10-grid/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
@@ -17,42 +18,42 @@
                     <h1>Architectural Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1">
+                    <div class="photo el-1 wow animate__bounceInRight" data-wow-duration="2s">
                         <img src="assets/image/city-1.png" alt="">
                         <div class="info">
                             <div class="name">Jezael Melgoza</div>
                             <div class="date">5 June 2020</div>
                         </div>
                     </div>
-                    <div class="photo el-2 colspan">
+                    <div class="photo el-2 colspan wow animate__bounceInRight" data-wow-delay="0.2s" data-wow-duration="2s">
                         <img src="assets/image/city2.png" alt="">
                         <div class="info">
                             <div class="name">Tom W</div>
                             <div class="date">30 March 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-3 colspan">
+                    <div class="photo el-3 colspan  wow animate__bounceInLeft" data-wow-delay="0.2s" data-wow-duration="2s">
                         <img src="assets/image/city3.png" alt="">
                         <div class="info">
                             <div class="name">Johan Mouchet</div>
                             <div class="date">14 August 2019</div>
                         </div>
                     </div>
-                    <div class="photo el-4">
+                    <div class="photo el-4  wow animate__bounceInLeft" data-wow-duration="2s">
                         <img src="assets/image/city4.png" alt="">
                         <div class="info">
                             <div class="name">Federico Di Dio</div>
                             <div class="date">29 October 2020</div>
                         </div>
                     </div>
-                    <div class="photo el-5">
+                    <div class="photo el-5  wow animate__bounceInRight" data-wow-duration="2s">
                         <img src="assets/image/city5-1.png" alt="">
                         <div class="info">
                             <div class="name">Casey Horner</div>
                             <div class="date">9 July 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-6 colspan">
+                    <div class="photo el-6 colspan  wow animate__bounceInRight" data-wow-delay="0.2s" data-wow-duration="2s">
                         <img src="assets/image/city6.png" alt="">
                         <div class="info">
                             <div class="name">Alexander Rotker</div>
@@ -66,42 +67,42 @@
                     <h1>Still Life Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1">
+                    <div class="photo el-1 wow animate__zoomIn">
                         <img src="assets/image/photo1.png" alt="">
                         <div class="info">
                             <div class="name">Robert Lukeman</div>
                             <div class="date">30 June 2020</div>
                         </div>
                     </div>
-                    <div class="photo el-2 colspan">
+                    <div class="photo el-2 colspan wow animate__zoomIn">
                         <img src="assets/image/photo2.png" alt="">
                         <div class="info">
                             <div class="name">Sean Oulashin</div>
                             <div class="date">5 September 2019</div>
                         </div>
                     </div>
-                    <div class="photo el-3 area">
+                    <div class="photo el-3 area wow animate__zoomIn">
                         <img src="assets/image/photo3.png" alt="">
                         <div class="info">
                             <div class="name">John Fowler</div>
                             <div class="date">10 August 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-4 rowspan">
+                    <div class="photo el-4 rowspan wow animate__zoomIn">
                         <img src="assets/image/photo4.png" alt="">
                         <div class="info">
                             <div class="name">Dave Hoefler</div>
                             <div class="date">13 February 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-5 colspan">
+                    <div class="photo el-5 colspan wow animate__zoomIn">
                         <img src="assets/image/photo5.png" alt="">
                         <div class="info">
                             <div class="name">Léonard Cotte</div>
                             <div class="date">5 September 2019</div>
                         </div>
                     </div>
-                    <div class="photo el-6">
+                    <div class="photo el-6 wow animate__zoomIn">
                         <img src="assets/image/photo6.png" alt="">
                         <div class="info">
                             <div class="name">Rob Mulally</div>
@@ -115,7 +116,7 @@
                     <h1>Portrait and Fashion Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1">
+                    <div class="photo el-1 wow animate__zoomIn" data-wow-duration="1s">
                         <img src="assets/image/image-1.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -130,7 +131,7 @@
                             <div class="date">30 June 2020</div>
                         </div>    
                     </div>
-                    <div class="photo el-2 rowspan">
+                    <div class="photo el-2 rowspan wow animate__backInDown">
                         <img src="assets/image/image2.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -145,7 +146,7 @@
                             <div class="date">13 October 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-3">
+                    <div class="photo el-3 wow animate__zoomIn" data-wow-duration="1s">
                         <img src="assets/image/image3.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -160,7 +161,7 @@
                             <div class="date">30 May 2020</div>
                         </div>                    
                     </div>
-                    <div class="photo el-4">
+                    <div class="photo el-4 wow animate__backInLeft">
                         <img src="assets/image/image4.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -175,7 +176,7 @@
                             <div class="date">30 June 2020</div>
                         </div>                    
                     </div>
-                    <div class="photo el-5 rowspan">
+                    <div class="photo el-5 rowspan wow animate__backInRight">
                         <img src="assets/image/image5.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -190,7 +191,7 @@
                             <div class="date">13 February 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-6 rowspan">
+                    <div class="photo el-6 rowspan wow animate__backInLeft">
                         <img src="assets/image/image6.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -205,7 +206,7 @@
                             <div class="date">7 January 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-7">
+                    <div class="photo el-7 wow animate__zoomIn"  data-wow-duration="1s">
                         <img src="assets/image/image7.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -220,7 +221,7 @@
                             <div class="date">30 June 2020</div>
                         </div>
                     </div>
-                    <div class="photo el-8 colspan">
+                    <div class="photo el-8 colspan wow animate__backInRight">
                         <img src="assets/image/image8.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -235,7 +236,7 @@
                             <div class="date">29 April 2021</div>
                         </div>
                     </div>
-                    <div class="photo el-9 colspan">
+                    <div class="photo el-9 colspan wow animate__backInUp">
                         <img src="assets/image/image9.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -250,7 +251,7 @@
                             <div class="date">5 August 2019</div>
                         </div>
                     </div>
-                    <div class="photo el-10">
+                    <div class="photo el-10 wow animate__backInUp">
                         <img src="assets/image/image10.png" alt="">
                         <div class="icons">
                             <div class="icon">
@@ -269,5 +270,14 @@
             </div>
         </div>
     </main>
+    <script src="assets/js/wow.min.js"></script>
+    <script>
+        wow = new WOW(
+            {
+            animateClass: 'animate__animated', // default
+        }
+        )
+        wow.init();
+    </script>
 </body>
 </html>
