--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
@@ -74,26 +75,26 @@
         <section class="superpowers">
             <div class="container">
                 <div class="text">
-                    <h1>The Design Thinking superpowers</h1>
+                    <h1 class="wow animate__fadeInLeft">The Design Thinking superpowers</h1>
                     <!-- <div clsss="text-tutorials"> -->
-                        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                        <p class="wow animate__fadeInLeft" data-wow-delay="0.3s">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
                     <!-- </div> -->
-                    <button class="start">Get started</button>
+                    <button class="start wow animate__zoomIn" data-wow-delay="0.6s">Get started</button>
                 </div>
-                <div class="people">
+                <div class="people wow animate__zoomIn">
                     <img src="assets/img/Image.svg" alt="">
                 </div>
             </div>
         </section>
         <section class="tools">
             <div class="container">
-                <div class="subtitle">
+                <div class="subtitle wow animate__pulse" data-wow-iteration="2">
                     <h2>We design tools to unveil your superpowers</h2>
                 </div>
                 <div class="card">
                     <div class="list">
                         <ul>
-                            <li>
+                            <li class="wow animate__fadeInUp">
                                 <div class="logo-list">
                                     <span class="image">
                                         <div class="img">
@@ -108,7 +109,7 @@
                                     <span>While most people enjoy casino gambling</span>
                                 </div>
                             </li>
-                            <li>
+                            <li class="wow animate__fadeInUp" data-wow-delay="0.2s">
                                 <div class="logo-list">
                                     <span class="image designe">
                                         <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +122,7 @@
                                     <span>Sports betting, lottery and bingo playing for the fun</span>
                                 </div>
                             </li>
-                            <li>
+                            <li class="wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <div class="logo-list ">
                                     <span class="image tests">
                                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -134,7 +135,7 @@
                                     <span>The Myspace page defines the individual.</span>
                                 </div>
                             </li>
-                            <li>
+                            <li class="wow animate__fadeInUp" data-wow-delay="0.6s">
                                 <div class="logo-list">
                                     <span class="image second-tests">    
                                         <svg width="14" height="17" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -150,7 +151,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="now">
+                <div class="now wow animate__fadeInRight">
                     <button>Sign up Now</button>
                 </div>
             </div>
@@ -159,94 +160,94 @@
             <div class="container">
                 <div class="position">
                     <div class="position-wrapper">
-                        <div class="position-title">
+                        <div class="position-title wow animate__zoomIn">
                             <span>Effortless Validation for</span>
                             <h2>Design Professionals</h2>
                             <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                         </div>
                         <div class="position-list">
                             <ul>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.2s">
                                     <h3>Accessory makers</h3>
                                     <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
                                 </li>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.4s">
                                     <h3>Alterationists</h3>
                                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
                                 </li>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.6s">
                                     <h3>Custom Design designers</h3>
                                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="design-img">
+                    <div class="design-img wow animate__zoomIn">
                         <img src="assets/img/Image-man.svg" alt="">
                     </div>
                 </div>
                 <div class="position">
                     <div class="position mg">
                         <div class="position-wrapper mg">
-                            <div class="position-title">
+                            <div class="position-title wow animate__zoomIn">
                                 <span>Easier decision making for</span>
                                 <h2>Product Managers</h2>
                                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                             </div>
                             <div class="position-list">
                                 <ul>
-                                    <li class="position-li">
+                                    <li class="position-li wow animate__fadeInRight" data-wow-delay="0.2s">
                                         <img src="assets/img/icon.svg" alt="">
                                         <p>Never worry about overpaying for your energy bill again. </p>
                                     </li>
-                                    <li class="position-li">
+                                    <li class="position-li wow animate__fadeInRight" data-wow-delay="0.4s">
                                         <img src="assets/img/icon.svg" alt="">
                                         <p>We will only switch you to energy companies that we trust and will treat you right.</p>
                                     </li>
-                                    <li class="position-li">
+                                    <li class="position-li wow animate__fadeInRight" data-wow-delay="0.6s">
                                         <img src="assets/img/icon.svg" alt="">
                                         <p>We track the markets daily and know where the savings are.</p>
                                     </li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="manager-img">
+                        <div class="manager-img wow animate__zoomIn">
                             <img src="assets/img/Image-manager.svg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="position">
                     <div class="position-wrapper markets">
-                        <div class="position-title">
+                        <div class="position-title wow animate__zoomIn">
                             <span>Optimisation for</span>
                             <h2>Marketers</h2>
                             <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
                         </div>
                         <div class="position-list">
                             <ul>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.2s">
                                     <h3>Accessory makers</h3>
                                     <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
                                 </li>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.4s">
                                     <h3>Alterationists</h3>
                                     <p>If you are looking for a new way to promote your business that won’t cost you more money. </p>
                                 </li>
-                                <li>
+                                <li class="wow animate__fadeInLeft" data-wow-delay="0.6s">
                                     <h3>Custom Design designers</h3>
                                     <p>If you are looking for a new way to promote your business that won’t cost you more money.  </p>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="design-img">
+                    <div class="design-img wow animate__zoomIn">
                         <img src="assets/img/Image-marketers.svg" alt="">
                     </div>
                 </div>
             </div>
         </section>
        </main> 
-       <footer class="footer">
+       <footer class="footer wow animate__fadeInUp">
             <div class="container">
                 <div class="footer-wrapper">
                     <div class="ft logo">
@@ -292,6 +293,15 @@
         }
         window.hamb_btn.addEventListener('click', toggleMobileNav)
         window.hamb_btn_mob.addEventListener('click', toggleMobileNav)
+    </script>
+    <script src="assets/js/wow.min.js"></script>
+    <script>
+        wow = new WOW(
+            {
+            animateClass: 'animate__animated', // default
+        }
+        )
+        wow.init();
     </script>
 </body>
 </html>
