--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
         <li>
             <a href="13-svg/index.html">Lesson 13-svg</a>
         </li>
-        <li>
+        <!-- <li>
             <a href="14-practice-rwd/index.html"></a>
-        </li>
+        </li> -->
         <li>
             <a href="15-rwd-img/index.html">Lesson 15-rwd-img</a>
+        </li>
+        <li>
+            <a href="exam-1/index.html">Exam-1</a>
         </li>
     </ul>
 </body>
