--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <li>
             <a href="exam-1/index.html">Exam-1</a>
         </li>
+        <li>
+            <a href="1-js-intro/">Lesson 1-js-intro</a>
+        </li>
     </ul>
 </body>
 </html>
