--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
             <a href="exam-1/index.html">Exam-1</a>
         </li>
         <li>
-            <a href="1-js-intro/">Lesson 1-js-intro</a>
+            <a href="1-js-intro/index.html">Lesson 1-js-intro</a>
+        </li>
+        <li>
+            <a href="2-js-operators/index.html">Lesson 2-js-operators</a>
         </li>
     </ul>
 </body>
