added link 03-js

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <li>
             <a href="2-js-operators/index.html">Lesson 2-js-operators</a>
         </li>
+        <li>
+            <a href="03-js-conditions/index.html">Lesson 03-js-conditions</a>
+        </li>
     </ul>
 </body>
 </html>
