added link 04-js

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <li>
             <a href="03-js-conditions/index.html">Lesson 03-js-conditions</a>
         </li>
+        <li>
+            <a href="4-js-function/index.html">Lesson 04-js-function</a>
+        </li>
     </ul>
 </body>
 </html>
