corrected errors 04-js

--- a/4-js-function/index.html
+++ b/4-js-function/index.html
@@ -36,7 +36,7 @@
                 <br>
                 <button type="button" class="btn btn-info" onclick="task2()">Вивести</button>
                 <br>
-                <div id="number"></div>
+                <div id="rez"></div>
             </div>
         </div>
         <div class="card mb-4 mt-4">
@@ -90,7 +90,7 @@
         <div class="card mb-4 mt-4">
             <h5 class="card-header">Завдання 6</h5>
             <div class="card-body">
-                <p>Напиши функцію, яка змінює довжину і ширину прямокутника і обчислює його площу. Якщо у функції передали 1 параметр, то вона обчислює площу квадрата.</p>
+                <p>Напиши функцію, яка приймає довжину і ширину прямокутника і обчислює його площу. Якщо в функцію передали 1 параметр, то вона обчислює площу квадрата.</p>
             </div>
             <div class="card-footer">
                 <input type="number" class="form-control" id="width">
@@ -118,14 +118,16 @@
         <div class="card mb-4 mt-4">
             <h5 class="card-header">Завдання 8</h5>
             <div class="card-body">
-                <p>Напишіть функцію, яка вимагає мінімального і максимального значення для частини, і виводить тільки ті числа з частини, які є досконалими. Використовуй написану функцію раніше, щоб знати, чи є це число досконалим.</p>
+                <p>Напиши функцію, яка приймає мінімальне і максимальне значення для діапазону, і виводить тільки ті числа з діапазону, які є досконалими. Використовуй написану раніше функцію, щоб дізнатися, чи є це число досконалим.</p>
             </div>
             <div class="card-footer">
-                <input type="number" class="form-control" id="suma">
+                <input type="number" class="form-control" id="num_1">
+                <br>
+                <input type="number" class="form-control" id="num_2">
                 <br>
                 <button type="button" class="btn btn-info" onclick="task8()">Вивести</button>
                 <br>
-                <div id="discountedAmount"></div>
+                <div id="range_numbers"></div>
             </div>
         </div>
     </div>
