--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <li>
             <a href="4-js-function/index.html">Lesson 04-js-function</a>
         </li>
+        <li>
+            <a href="05-js-object/index.html">Lesson 05-js-object</a>
+        </li>
     </ul>
 </body>
 </html>
