--- a/05-js-object/index.html
+++ b/05-js-object/index.html
@@ -14,7 +14,9 @@
             <div class="card-body">
                 <p>Створи об'єкт, що описує автомобіль (виробник, модель, рік випуску, середня швидкість, обсяг паливного баку, середня витрата палива на 100 км., водії), і наступні методи для роботи з цим об'єктом:
                     1.Метод, який виводить на екран інформацію про автомобіль.
-                    2.Підрахунок необхідного часу та кількості палива для подолання переданої відстані з середньою швидкістю. Враховуй, що через кожні 4 години дороги водієві необхідно робити перерву на 1 годину.</p>
+                    2.Додавання ім’я водія у список.
+                    3.Перевірка водія на наявність його ім’я у списку.
+                    4.Підрахунок необхідного часу та кількості палива для подолання переданої відстані з середньою швидкістю. Враховуй, що через кожні 4 години дороги водієві необхідно робити перерву на 1 годину. </p>
                     <div id="info-car"></div>
                     <button type="button" class="btn btn-info" onclick="task1_1()">Показати</button>
             </div>
@@ -25,6 +27,18 @@
                 <br>
                 <div id="rez"></div>
                 <div id="time"></div>
+                <br>
+                <input type="text" class="form-control" id="name" placeholder="Введіть ім’я водія яке бажаєте додати">
+                <br>
+                <button type="button" class="btn btn-info" onclick="addDrivers()">Вивести</button>
+                <br>
+                <div id="rezName"></div>
+                <br>
+                <input type="text" class="form-control" id="check" placeholder="Введіть ім’я водія яке для перевірки">
+                <br>
+                <button type="button" class="btn btn-info" onclick="checkDrivers()">Перевірити</button>
+                <br>
+                <div id="rezCheck"></div>
             </div>
         </div>
         <div class="card mb-4 mt-4">
