--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
         <li>
             <a href="05-js-object/index.html">Lesson 05-js-object</a>
         </li>
+        <li>
+            DOM: <ul>
+                <li>
+                    <a href="07-js-DOM/index.html">Lesson 07-js-DOM</a>
+                </li>
+                <li>
+                    <a href="07-js-1-DOM/index.html">Lesson 07-js-1-DOM</a>
+                </li>
+                <li>
+                    <a href="07-js-02-Dom/index.html">Lesson 07-js-02-Dom</a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </body>
 </html>
