--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="14-practice-rwd/index.html"></a>
         </li> -->
         <li>
-            <a href="15-rwd-img/index.html">Lesson 15-rwd-img</a>
+            <a href="15-rwd-img/index.html">Lesson 14-rwd-img</a>
         </li>
         <li>
             <a href="exam-1/index.html">Exam-1</a>
@@ -89,6 +89,9 @@
                     <a href="07-js-02-Dom/index.html">Lesson 07-js-02-Dom</a>
                 </li>
             </ul>
+        </li>
+        <li>
+            <a href="08-js-events/index.html">Lesson 08-js-events</a>
         </li>
     </ul>
 </body>
