--- a/exam-2/index.html
+++ b/exam-2/index.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="assets/plagins/light-slider/css/lightslider.min.css">
     <link rel="stylesheet" href="assets/plagins/leaflet/leaflet.css">
     <link rel="stylesheet" href="assets/plagins/light-galery/css/lightgallery.css">
-    <link rel="stylesheet" href="assets/plagins/light-galery/css/lg-thumbnail.css">
     <link rel="stylesheet" href="assets/plagins/light-galery/css/lg-zoom.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
@@ -40,7 +39,7 @@
             <div class="panel-top">
                 <div class="logo-mb">
                     <a href="#">
-                        <img src="assets/img/logo.svg" alt="logo-mobile">
+                        <img src="assets/img/Logo.svg" alt="logo-mobile">
                     </a>
                 </div>
                 <div class="hamburger-wrap-mb">
@@ -247,7 +246,7 @@
                     </div>
                     <div class="project rev">
                         <div class="left">
-                            <div class="wrap-img">
+                            <div class="wrap-img rev">
                                 <img src="data:image/gif;base64,R0lGODlhBAADAIAAAP///wAAACH5BAEAAAEALAAAAAAEAAMAAAIDjI9WADs= " class="lazy" data-src="assets/img/project2-min.jpg" alt="photo">
                             </div>
                         </div>
@@ -392,7 +391,6 @@
     <script src="assets/plagins/leaflet/leaflet.js"></script>
     <script src="assets/js/toast.js"></script>
     <script src="assets/plagins/light-galery/lightgallery.min.js"></script>
-    <script src="assets/plagins/light-galery/plugins/thumbnail/lg-thumbnail.min.js"></script>
     <script src="assets/plagins/light-galery/plugins/zoom/lg-zoom.min.js"></script>
     <script src="assets/js/lazyload.min.js"></script>
     <script src="assets/js/main.js"></script>
