--- a/exam-2/index.html
+++ b/exam-2/index.html
@@ -53,10 +53,10 @@
             <div class="wrap-nav-mb">
                 <nav class="mobile-nav">
                     <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#aboutUs">About Us</a></li>
+                        <li><a href="#what_we_do">Projects</a></li>
+                        <li><a href="#news">News</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
