added 11-js-class 12-react 13-practic-react

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
         <li>
             <a href="exam-2/index.html">Exam-2</a>
         </li>
+        <li>
+            <a href="16-js-class-homework/index.html">Lesson 11-js-class</a>
+        </li>
+        <li>
+            <a href="17-js-home-work-react/index.html">Lesson 12 react-homework</a>
+        </li>
+        <li>
+            <a href="06-2-weather – react/index.html">Lesson 13-practic-weather-react</a>
+        </li>
     </ul>
 </body>
 </html>
