--- a/16-js-class-homework/index.html
+++ b/16-js-class-homework/index.html
@@ -29,7 +29,7 @@
                 </select>
                 <br>
                 <label for="number">Кількість чорнил у маркері:</label>
-                <input type="number" class="form-control" id="number" placeholder="1-100" value="50" required>
+                <input type="number" class="form-control" id="number" placeholder="1-100" required>
                 <br>
                 <button type="button" class="btn btn-info" id="showInfo">Click</button>
                 <br>
